# sobaken-id

./: .gitignore  .gitmodules  README.md  data.yaml  more-on-data.md  next-steps.md  pyproject.toml  test-data.txt.dvc  yolo_segmentation_train.py  yolov8_segment_with_annotations.py
.dvc/: config
data-collection/: collect_vk_groups.py  remove-reposts-and-duplicates.py  response_parser.py
data-collection/archive/: fix_file_names_with_post_id.py  prefix_with_group_id.py  vk.py
data-collection/resources/: example-index.json  example-response.json  parameters.json
data-collection/tools/: add_post_text_as_delims.py  file_name_info.py  prefix_with_group_id.py  prune_index_file.py  remove_small_num_imgs_posts.py  rm_delims.py  rm_singles_add_delims.py  split_local_dataset.py  subset_index_for_markup.py
deduplication/: split_idex_per_group.py  split_parts_to_groups.py
re-identification/: dom_lapkin.py  flatten-dir.py  prepare_dataset.py  test-reid-inference-heat.py  test-reid-inference.py  test-reid-metrics.py  test-reid.py  train-reid.py
re-identification/my_datasets/: dom_lapkin.py  process_dir.py  vk_posts_3.py  vkg34900407plus.py
scraping/: remove-duplicates.py  rename_files.py  response_parser.py  vk.py
scraping/resources/: example-index.json  parameters.json
scraping/tools/: split_local_dataset.py
segmentation/: PixelLib.py  bulk-segment-and-clip.py
