[tool.poetry]
name = "sobaken-id"
version = "0.1.0"
description = ""
authors = ["Albert Bikeev <albert.bikeev@gmail.com>"]
readme = "README.md"
packages = [{ include = "scraping" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
